--- a/.github/workflows/build_gd.yml
+++ b/.github/workflows/build_gd.yml
@@ -22,13 +22,13 @@ jobs:
         ruby-version: '2.7'
 
     - name: Install Bundler
-      run: gem install bundler
+      run: gem install bundler -v 2.3.0
 
     - name: Install dependencies
       run: bundle install
 
     - name: Set up Xcode
-      run: sudo xcode-select -s /Applications/Xcode_13.2.1.app
+      run: sudo xcode-select -s /Applications/Xcode.app
 
     - name: Build and upload to TestFlight
       run: bundle exec fastlane beta
