--- a/.github/workflows/build_gd.yml
+++ b/.github/workflows/build_gd.yml
@@ -1,3 +1,11 @@
+**Pseudocode:**
+1. Ensure the `Gemfile` is present in the repository.
+2. Verify the `Gemfile` includes the necessary dependencies for `fastlane`.
+3. Update the GitHub Actions workflow to specify the correct working directory if the `Gemfile` is not in the root directory.
+
+**Code:**
+
+```yaml
 name: Build and Deploy to TestFlight
 
 on:
@@ -26,6 +34,7 @@ jobs:
 
     - name: Install dependencies
       run: bundle install
+      working-directory: ./path/to/your/Gemfile
 
     - name: Set up Xcode
       run: sudo xcode-select -s /Applications/Xcode.app
@@ -37,3 +46,7 @@ jobs:
         APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
         FASTLANE_SESSION: ${{ secrets.FASTLANE_SESSION }}
         MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+      working-directory: ./path/to/your/Gemfile
+```
+
+Replace `./path/to/your/Gemfile` with the actual path to your `Gemfile` if it is not in the root directory.
