fix: still trying

--- a/.github/workflows/build_gd.yml
+++ b/.github/workflows/build_gd.yml
@@ -5,6 +5,7 @@ on:
 
   schedule:
   - cron: "0 6 1 * *" # Builds the app on the 1st of every month at 06:00 UTC
+# - cron: "0 6 1 */3 *" # Builds the app on the 1st of every third month at 06:00 UTC
 
   push:
     branches:
