--- a/GlucoseDirectOverride.xcconfig
+++ b/GlucoseDirectOverride.xcconfig
@@ -3,4 +3,13 @@
 //  LibreDirect
 //
 
-DEVELOPMENT_TEAM = 9JNYW2DG9D
+/
+//  AppConfigOverride.xcconfig
+//  LibreDirect
+//
+
+PRODUCT_BUNDLE_IDENTIFIER = name.${DEVELOPMENT_TEAM}.libre-direct
+DEVELOPMENT_TEAM = 
+
+APP_AUTHOR = Reimar Metzen
+APP_SUPPORT_MAIL = glucosedirect@icloud.com
