--- a/GlucoseDirect.xcconfig
+++ b/GlucoseDirect.xcconfig
@@ -4,7 +4,7 @@
 //
 
 DEVELOPMENT_TEAM = ##TEAM_ID##
-PRODUCT_BUNDLE_IDENTIFIER = com.${DEVELOPMENT_TEAM}.libre-direct
+PRODUCT_BUNDLE_IDENTIFIER = name.${DEVELOPMENT_TEAM}.libre-direct
 APP_GROUP_ID = group.com.$(DEVELOPMENT_TEAM).loopkit.LoopGroup
 APP_VERSION = 1.0.0
 
